@@ -3,6 +3,6 @@ package io.satra.iconnect.exception;
 public class UserAlreadyExistsException extends Exception {
 
     public UserAlreadyExistsException(String mobile) {
-        super("User with mobile %s already exists!".formatted(mobile));
+        super(String.format("User with mobile number %s already exists", mobile));
     }
 }
